kubernetes/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: dettinjo/auth_service:v2
        ports:
        - containerPort: 8001
        volumeMounts:
        - name: db-storage
          mountPath: /var/data
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: db-auth-pvc
