kubernetes/shortener-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: url-shortener-service
  template:
    metadata:
      labels:
        app: url-shortener-service
    spec:
      containers:
      - name: url-shortener-service
        image: dettinjo/url_shortener_service:v2
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: db-storage
          mountPath: /var/data
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: db-shortener-pvc
