kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unified-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - assignment.897000.xyz
    secretName: acme-crt-secret
  rules:
  - host: assignment.897000.xyz
    http:
      paths:
      - path: "/auth(/|$)(.*)"
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-service
            port:
              number: 8001
      - path: "/shortener(/|$)(.*)"
        pathType: ImplementationSpecific
        backend:
          service:
            name: url-shortener-service
            port:
              number: 8000
      - path: "/()(.*)?"
        pathType: ImplementationSpecific
        backend:
          service:
            name: headlamp
            port:
              number: 80
